# windows-monitor-manager-auto

./: .gitignore  Cargo.toml  README.md  README_zh-CN.md  README_zh-TW.md
.github/workflows/: ci.yml  release.yml
monitor-lib/: Cargo.toml
monitor-lib/src/: display.rs  lib.rs
monitor-service/: Cargo.toml  build.rs
monitor-service/assets/: index.html
monitor-service/src/: hotkey.rs  logger.rs  main.rs  process_win.rs  session_mutex.rs  shutdown.rs  system_icon.rs  tray.rs
