[package]
name = "monitor-service"
version = "0.1.0"
edition = "2021"

[dependencies]
monitor-lib = { path = "../monitor-lib" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-embed = "8.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
mime_guess = "2.0"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
once_cell = "1.19"

[build-dependencies]
# winres removed: it emits cargo:rustc-link-lib=static=resource which causes
# GNU ld to drop the .rsrc section (no exported symbols → archive skipped).
# build.rs now calls windres directly and uses cargo:rustc-link-arg to link
# the .o file, preserving the .rsrc section in the final PE.

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.7"
native-windows-gui = { path = "../../0_external_libs/native-windows-gui-1.0.0/native-windows-gui-1.0.0/native-windows-gui", default-features = false, features = ["tray-notification", "message-window", "menu", "cursor", "timer"] }
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_RemoteDesktop",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Environment",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug", 
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices",
    "Win32_System_IO",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Shutdown",

    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_StationsAndDesktops",
] }
